add: tomcat plugin

--- a/pom.xml
+++ b/pom.xml
@@ -117,11 +117,13 @@
 
     <build>
         <plugins>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <version>3.3.1</version>
             </plugin>
+
             <plugin>
                 <groupId>org.bsc.maven</groupId>
                 <artifactId>maven-processor-plugin</artifactId>
@@ -137,7 +139,7 @@
                             <processors>
                                 <processor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor</processor>
                             </processors>
-                           <compilerArguments>-AaddGeneratedAnnotation=true</compilerArguments>
+                            <compilerArguments>-AaddGeneratedAnnotation=true</compilerArguments>
                         </configuration>
                     </execution>
                 </executions>
@@ -149,6 +151,35 @@
                     </dependency>
                 </dependencies>
             </plugin>
+
+            <plugin>
+                <!--mvn package cargo:run-->
+                <!--Ctrl-C to stop-->
+                <groupId>org.codehaus.cargo</groupId>
+                <artifactId>cargo-maven2-plugin</artifactId>
+                <version>1.8.3</version>
+                <configuration>
+                    <container>
+                        <containerId>tomcat9x</containerId>
+                        <type>embedded</type>
+                    </container>
+                    <configuration>
+                        <properties>
+                            <cargo.servlet.port>8181</cargo.servlet.port>
+                        </properties>
+                    </configuration>
+                    <deployables>
+                        <deployable>
+                            <type>war</type>
+                            <location>${project.build.directory}/${project.build.finalName}.war</location>
+                            <properties>
+                                <context>/</context>
+                            </properties>
+                        </deployable>
+                    </deployables>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 </project>
